2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* include/flash_priv.h, src/legacy_dev.c: clean up the interface
	between the generic flash code and the device drivers
	* include/flash_priv, src/flash_legacy.h, src/flash.c,
	src/legacy_dev.c: move cache stuff andother legacy macros
	to an internal header.
	* include/flash.h, include/flash_priv.h, doc/flash.sgml,
	src/flash.c, src/legacy_dev.c: put const in the right places,
	and rename cyg_block_info to cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>

	* src/flash.c, include/flash_priv.h, cdl/io_flash.h: optimize
	for the case of a single flash device.
	* include/flash.h, src/flash.c, doc/flash.sgml: remove
	cyg_flash_code_overlaps()
	* include/flash_priv.h, include/flash.h:
	CYGSEM_IO_FLASH_LEGACY_DEVICE_API has been removed, test
	CYGHWR_IO_FLASH_DEVICE_LEGACY instead 
	* cdl/io_flash.cdl: lots of clean-ups
	* src/legacy_dev.c (legacy_flash_read): only needed if the
	underlying legacy driver required indirect reads.
	* src/flash.c: encapsulate various optional bits of code in
	macros, to cut down on the #ifdef's in the main code

2004-11-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/io_flash.cdl, src/flash.c(cyg_flash_read): add an interface
	for hardware which requires indirect reads, and suppress
	unnecessary code if direct reads are always available.
	* src/flash.c: rearrange loops to avoid address comparisons, which
	tend to go wrong if the flash is at the end of the address space

2004-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/legacy_dev.c (legacy_flash_init): The end is the size plus
	the start.

2004-09-30  Savin Zlobec <savin@elatec.si>

	* src/flash.c: Offset into the block is not calculated correctly
	when the flash start is not aligned on a flash block.
	* src/legacy_dev.c (legacy_flash_read): Fixed typo.

2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (cyg_flash_init): Add assert checking that the
	end address matches the block information.